[package]
edition = "2018"
name = "yew-blog"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql_client = { version = "0.10.0", features = ["reqwest-blocking"] }
pulldown-cmark = "0.9.0"
reqwest = { version = "0.11.8", features = ["json", "blocking"] }
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
wasm-bindgen = "0.2.78"
web-sys = "0.3.55"
yew = "0.19.3"
yew-router = "0.16.0"
