[package]
edition = "2018"
name = "yew-blog"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.9.0"
serde = { version = "1.0.132", features = ["derive"] }
web-sys = "0.3.55"
yew = "0.19.3"
yew-router = "0.16.0"
