[package]
edition = "2018"
name = "yew-blog"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.9.0"
serde = { version = "1.0.132", features = ["derive"] }
yew = "0.19.3"
yew-router = "0.16.0"


wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"]  }
js-sys = "0.3.55"
wasm-bindgen-futures = "0.4.28"
serde_derive = "^1.0.59"
gloo = "0.5.0"
serde_json = "1.0.74"
regex = "1.5.4"

[dependencies.web-sys]
version = "0.3.55"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]
